--- a/html/_/index.html
+++ b/html/_/index.html
@@ -871,39 +871,35 @@ crossorigin=""/>
 
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
                     <div class="blockannexeI49 mt-3 listy-49th-IFRA-table-without-botanicals IFRA-table">
-                      <p>
-                      <h2 class="annexeI49B d-inline text-size-14px">
-                        <span>
-                          <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
-                          <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
-                        </span>
-                      </h2>
+                      <h3 class="annexeI49B d-inline IFRA-infos textitem2">
+                        <span lang="fr"><b class="item">Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
+                        <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                      </h3>
                       <br>
-                        <table class="49THtableannexeI ">
+                        <table class="49THtableannexeI mt-0 ">
                           <!-- EN-TETE DU TABLEAU-->
-                              <thead>
-                                <tr>
-                                  <th colspan="3">
-                                    <span lang="fr">Liste des composés réglementés contenus dans cet ingrédient</span>
-                                    <span lang="en">List of regulated compounds contained in this ingredient</span>
-                                  </th>
-                                </tr>
-                              </thead>
-                                <tr style="background-color: #FBE5D6FF; font-weight: bold;">
-                                  <td>
-                                    <span lang="fr">Nom de l'ingrédient réglementé</span>
-                                    <span lang="en">Regulated ingredient name</span>
-                                  </td>
-                                  <td>CAS N°</td>
-                                  <td>
-                                    <span lang="fr">Concentration estimée</span>
-                                    <span lang="en">Estimated Concentration</span>
-                                  </td>
-                                </tr>
-                              <tbody class="ingredients-containing-without-botanicals-49">
-                              </tbody>
+                          <thead>
+                            <tr>
+                              <th colspan="3">
+                                <span lang="fr">Liste des composés réglementés contenus dans cet ingrédient</span>
+                                <span lang="en">List of regulated compounds contained in this ingredient</span>
+                              </th>
+                            </tr>
+                          </thead>
+                            <tr style="background-color: #FBE5D6FF; font-weight: bold;">
+                              <td>
+                                <span lang="fr">Nom de l'ingrédient réglementé</span>
+                                <span lang="en">Regulated ingredient name</span>
+                              </td>
+                              <td>CAS N°</td>
+                              <td>
+                                <span lang="fr">Concentration estimée</span>
+                                <span lang="en">Estimated Concentration</span>
+                              </td>
+                            </tr>
+                          <tbody class="ingredients-containing-without-botanicals-49">
+                          </tbody>
                         </table>
-                      </p>
                     </div><!--Fermeture blockannexeI49-->
 
                   </div><!--Ici on ferme col-12-->
