--- a/html/_/index.html
+++ b/html/_/index.html
@@ -908,14 +908,14 @@ crossorigin=""/>
             </div><!--Fermeture du 49th amendement-->
           </div><!--Fermeture du tab-content-->
 
-          <div class="lienarticlereglementation mt-3">
+          <div class="lienarticlereglementation mt-3 mb-1">
               <!--Lien externe vers site IFRA-->
-              <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
-              <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+              <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+              <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
               <br>
               <!--Lien interne sur l'IFRA-->
-              <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
-              <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span>
+              <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, consultez notre <a href="../_/IFRA.html" target="_BLANK">article sur l'IFRA</a></span>
+              <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_BLANK">article about l'IFRA</a></span>
           </div>
         </div>
         <!--Block Pictogrammes-->
