--- a/html/_/index.html
+++ b/html/_/index.html
@@ -908,6 +908,7 @@ crossorigin=""/>
             </div><!--Fermeture du 49th amendement-->
           </div><!--Fermeture du tab-content-->
 
+          <!--PARAGRAPHE DES LIENS INTERNE/EXTERNE-->
           <div class="lienarticlereglementation mt-3 mb-1">
               <!--Lien externe vers site IFRA-->
               <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
