--- a/html/_/index.html
+++ b/html/_/index.html
@@ -458,7 +458,7 @@ crossorigin=""/>
             </span>
             <br>
             <!--Onglets pour les amendements IFRA-->
-            <div class="panel-heading m-0 p-0">
+            <div class="panel-heading m-0 p-0" style="background-color: grey;">
               <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <div class="collapse navbar-collapse text-size-16px m-0 p-0">
                   <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
@@ -726,7 +726,6 @@ crossorigin=""/>
                         <span class="modalbody-commentifra-49 textitem"></span>  
                       </h3>
                       
-                    
                       <div class="blocktable49 mt-3">
                         <!--Titre des tableaux : "Dosage limite recommandé"-->
                         <h3 class="d-inline text-size-14px">
