--- a/html/_/index.html
+++ b/html/_/index.html
@@ -480,12 +480,12 @@ crossorigin=""/>
             </div>  
           <div class="tab-content">
             <!--Ouverture du 48th amendement-->
-            <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48">    
+            <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48" style="background-color: blue;">    
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
-                    <div class="blockifra1 mt-3">
+                    <div class="blockifra1 mt-3" style="grey;">
                       <!--Type de restriction-->
                       <h3 class="restriction d-inline text-size-14px IFRA-infos">
                         <span>
