--- a/html/_/index.html
+++ b/html/_/index.html
@@ -485,7 +485,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
-                    <div class="blockifra1 mt-3" style="grey;">
+                    <div class="blockifra1 mt-1">
                       <!--Type de restriction-->
                       <h3 class="restriction d-inline text-size-14px IFRA-infos">
                         <span>
