--- a/html/_/index.html
+++ b/html/_/index.html
@@ -458,7 +458,7 @@ crossorigin=""/>
             </span>
             <br>
             <!--Onglets pour les amendements IFRA-->
-            <div class="panel-heading m-0 p-0" style="background-color: grey;">
+            <div class="panel-heading m-0 p-0">
               <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <div class="collapse navbar-collapse text-size-16px m-0 p-0">
                   <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
@@ -480,7 +480,7 @@ crossorigin=""/>
             </div>  
           <div class="tab-content">
             <!--Ouverture du 48th amendement-->
-            <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48" style="background-color: blue;">    
+            <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48">    
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
@@ -689,7 +689,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
 
-                    <div class="blockcategories49 mt-3">
+                    <div class="blockcategories49 mt-1">
                       <!--Type de restriction-->
                       <h3 class="restriction49 d-inline text-size-14px  IFRA-infos">
                         <span>
