--- a/html/_/index.html
+++ b/html/_/index.html
@@ -438,7 +438,7 @@ crossorigin=""/>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
               <span id="modalbody-allergenes" class="textitem"></span>
           </h3>
-          <p class="lienarticlereglementation mt-3 mb-0">
+          <p class="lienarticlereglementation mt-1 mb-0">
             <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
             <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
           </p>
@@ -446,7 +446,7 @@ crossorigin=""/>
         <!--Fin du block allergènes-->
         <br>
         <!--Block IFRA entier-->
-        <div class="IFRA">
+        <div class="IFRA mt-1">
             <!--Apparition du mot IFRA-->
             <h2 class="d-inline item text-size-16px">
               <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
