--- a/html/_/index.html
+++ b/html/_/index.html
@@ -432,13 +432,13 @@ crossorigin=""/>
     <div class="row">
       <div class="col-12">
         <!--Block Allergènes-->
-        <div class="blockallergenes mb-0">
+        <div class="blockallergenes m-0">
           <h3 class="item d-inline text-size-16px">
               <b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
               <span id="modalbody-allergenes" class="textitem"></span>
           </h3>
-          <p class="lienarticlereglementation mt-1 mb-0">
+          <p class="lienarticlereglementation mt-1">
             <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
             <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
           </p>
@@ -446,7 +446,7 @@ crossorigin=""/>
         <!--Fin du block allergènes-->
         <br>
         <!--Block IFRA entier-->
-        <div class="IFRA mt-1">
+        <div class="IFRA m-0">
             <!--Apparition du mot IFRA-->
             <h2 class="d-inline item text-size-16px">
               <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
