--- a/html/_/index.html
+++ b/html/_/index.html
@@ -737,40 +737,40 @@ crossorigin=""/>
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th>
-                                    <span lang="fr">Cat.1 <sup class="fas fa-question-circle iconetab" title="Produits pour les lèvres"></sup>
-                                    <span lang="en">Cat.1 <sup class="fas fa-question-circle iconetab" title="Products applied to the lips"></sup>
+                                    <span lang="fr">Cat.1 <sup class="fas fa-question-circle iconetab" title="Produits pour les lèvres"></sup></span>
+                                    <span lang="en">Cat.1 <sup class="fas fa-question-circle iconetab" title="Products applied to the lips"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Produits pour les aisselles"></sup>
-                                    <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Products applied to the axillae"></sup>
+                                    <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Produits pour les aisselles"></sup></span>
+                                    <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Products applied to the axillae"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits appliqués sur le visage et le coprs en utilisant le bout des doigts"></sup>
-                                    <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Products applied to the face/body using fingertips"></sup>
+                                    <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits appliqués sur le visage et le coprs en utilisant le bout des doigts"></sup></span>
+                                    <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Products applied to the face/body using fingertips"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits de Fine Fragrance"></sup>
-                                    <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Products related to Fine Fragrances"></sup>
+                                    <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits de Fine Fragrance"></sup></span>
+                                    <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Products related to Fine Fragrances"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.5A <sup class="fas fa-question-circle iconetab" title="Lotion pour le corps appliquée en utilisant la paume de la main, (produits sans rinçage)"></sup>
-                                    <span lang="en">Cat.5A <sup class="fas fa-question-circle iconetab" title="Body lotion products applied to the body using the hands (palms), primarily leave on"></sup>
+                                    <span lang="fr">Cat.5A <sup class="fas fa-question-circle iconetab" title="Lotion pour le corps appliquée en utilisant la paume de la main, (produits sans rinçage)"></sup></span>
+                                    <span lang="en">Cat.5A <sup class="fas fa-question-circle iconetab" title="Body lotion products applied to the body using the hands (palms), primarily leave on"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.5B <sup class="fas fa-question-circle iconetab" title="Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)"></sup>
-                                    <span lang="en">Cat.5B <sup class="fas fa-question-circle iconetab" title="Face moisturizer products applied to the face using the hands (palms), primarily leave on"></sup>
+                                    <span lang="fr">Cat.5B <sup class="fas fa-question-circle iconetab" title="Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)"></sup></span>
+                                    <span lang="en">Cat.5B <sup class="fas fa-question-circle iconetab" title="Face moisturizer products applied to the face using the hands (palms), primarily leave on"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.5C <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)"></sup>
-                                    <span lang="en">Cat.5C <sup class="fas fa-question-circle iconetab" title="Hand cream products applied to the hands using the hands (palms), primarily leave on"></sup>
+                                    <span lang="fr">Cat.5C <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)"></sup></span>
+                                    <span lang="en">Cat.5C <sup class="fas fa-question-circle iconetab" title="Hand cream products applied to the hands using the hands (palms), primarily leave on"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.5D <sup class="fas fa-question-circle iconetab" title="Crèmes pour bébés, huiles pour bébés et talc pour bébés"></sup>
-                                    <span lang="en">Cat.5D <sup class="fas fa-question-circle iconetab" title="Baby Creams, baby Oils and baby talc"></sup>
+                                    <span lang="fr">Cat.5D <sup class="fas fa-question-circle iconetab" title="Crèmes pour bébés, huiles pour bébés et talc pour bébés"></sup></span>
+                                    <span lang="en">Cat.5D <sup class="fas fa-question-circle iconetab" title="Baby Creams, baby Oils and baby talc"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Produits avec exposition orale et labiale"></sup>
-                                    <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Products with oral and lip exposure"></sup>
+                                    <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Produits avec exposition orale et labiale"></sup></span>
+                                    <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Products with oral and lip exposure"></sup></span>
                                   </th>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
@@ -787,40 +787,40 @@ crossorigin=""/>
                                 </tr>
                                 <tr class="mt-2">
                                   <th>
-                                    <span lang="fr">Cat.7A <sup class="fas fa-question-circle iconetab" title="Produits rincés appliqués sur les cheveux avec contact des mains"></sup>
-                                    <span lang="en">Cat.7A <sup class="fas fa-question-circle iconetab" title="Rinse-off Products applied to the hair with some hand contact"></sup>
+                                    <span lang="fr">Cat.7A <sup class="fas fa-question-circle iconetab" title="Produits rincés appliqués sur les cheveux avec contact des mains"></sup></span>
+                                    <span lang="en">Cat.7A <sup class="fas fa-question-circle iconetab" title="Rinse-off Products applied to the hair with some hand contact"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.7B <sup class="fas fa-question-circle iconetab" title="Produits non-rincés appliqués sur les cheveux avec contact des mains"></sup>
-                                    <span lang="en">Cat.7B <sup class="fas fa-question-circle iconetab" title="Leave-on products applied to the hair with some hand contact"></sup>
+                                    <span lang="fr">Cat.7B <sup class="fas fa-question-circle iconetab" title="Produits non-rincés appliqués sur les cheveux avec contact des mains"></sup></span>
+                                    <span lang="en">Cat.7B <sup class="fas fa-question-circle iconetab" title="Leave-on products applied to the hair with some hand contact"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits présentant une exposition anogénitale significative"></sup>
-                                    <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Products with significant anogenital exposure"></sup>
+                                    <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits présentant une exposition anogénitale significative"></sup></span>
+                                    <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Products with significant anogenital exposure"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits appliqués sur le visage ou le corps (produits rinçés)"></sup>
-                                    <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Products with body and hand exposure, primarily rinse off"></sup>
+                                    <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits appliqués sur le visage ou le corps (produits rinçés)"></sup></span>
+                                    <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Products with body and hand exposure, primarily rinse off"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.10A <sup class="fas fa-question-circle iconetab" title="Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)"></sup>
-                                    <span lang="en">Cat.10A <sup class="fas fa-question-circle iconetab" title="Household care excluding aerosol products (excluding aerosol/spray products)"></sup>
+                                    <span lang="fr">Cat.10A <sup class="fas fa-question-circle iconetab" title="Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)"></sup></span>
+                                    <span lang="en">Cat.10A <sup class="fas fa-question-circle iconetab" title="Household care excluding aerosol products (excluding aerosol/spray products)"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.10B <sup class="fas fa-question-circle iconetab" title="Produits de sprays et aérosols ménager"></sup>
-                                    <span lang="en">Cat.10B <sup class="fas fa-question-circle iconetab" title="Household aerosol/spray products"></sup>
+                                    <span lang="fr">Cat.10B <sup class="fas fa-question-circle iconetab" title="Produits de sprays et aérosols ménager"></sup></span>
+                                    <span lang="en">Cat.10B <sup class="fas fa-question-circle iconetab" title="Household aerosol/spray products"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.11A <sup class="fas fa-question-circle iconetab" title="Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV"></sup>
-                                    <span lang="en">Cat.11A <sup class="fas fa-question-circle iconetab" title="Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure"></sup>
+                                    <span lang="fr">Cat.11A <sup class="fas fa-question-circle iconetab" title="Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV"></sup></span>
+                                    <span lang="en">Cat.11A <sup class="fas fa-question-circle iconetab" title="Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.11B <sup class="fas fa-question-circle iconetab" title="Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV"></sup>
-                                    <span lang="en">Cat.11B <sup class="fas fa-question-circle iconetab" title="Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure"></sup>
+                                    <span lang="fr">Cat.11B <sup class="fas fa-question-circle iconetab" title="Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV"></sup></span>
+                                    <span lang="en">Cat.11B <sup class="fas fa-question-circle iconetab" title="Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.12 <sup class="fas fa-question-circle iconetab" title="Produits non destinés à un contact direct avec la peau, transfert minimal ou insignifiant sur la peau"></sup>
-                                    <span lang="en">Cat.12 <sup class="fas fa-question-circle iconetab" title="Products not intended for direct skin contact, minimal or insignificant transfer to skin"></sup>
+                                    <span lang="fr">Cat.12 <sup class="fas fa-question-circle iconetab" title="Produits non destinés à un contact direct avec la peau, transfert minimal ou insignifiant sur la peau"></sup></span>
+                                    <span lang="en">Cat.12 <sup class="fas fa-question-circle iconetab" title="Products not intended for direct skin contact, minimal or insignificant transfer to skin"></sup></span>
                                   </th>
                                 </tr>
                                 <tr>
