--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1361,48 +1361,48 @@ crossorigin=""/>
                                     <!-- EN-TETE DU TABLEAU-->
                                     <tr>
                                       <th>
-                                        <span lang="fr">Cat.1 <sup class="fas fa-question-circle iconetab" title="Produits pour les lèvres"></sup>
-                                        <span lang="en">Cat.1 <sup class="fas fa-question-circle iconetab" title="Lip Products"></sup>
+                                        <span lang="fr">Cat.1 <sup class="fas fa-question-circle iconetab" title="Produits pour les lèvres"></sup></span>
+                                        <span lang="en">Cat.1 <sup class="fas fa-question-circle iconetab" title="Lip Products"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Déodorants/Antitranspirants"></sup>
-                                        <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Deodorants/Antiperspirants"></sup>
+                                        <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Déodorants/Antitranspirants"></sup></span>
+                                        <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Deodorants/Antiperspirants"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique rincés"></sup>
-                                        <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Shaved Skin"></sup>
+                                        <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique rincés"></sup></span>
+                                        <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Shaved Skin"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique non rincés"></sup>
-                                        <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Unshaved Skin"></sup>
+                                        <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique non rincés"></sup></span>
+                                        <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Unshaved Skin"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.5 <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains"></sup>
-                                        <span lang="en">Cat.5 <sup class="fas fa-question-circle iconetab" title="Hand Cream"></sup>
+                                        <span lang="fr">Cat.5 <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains"></sup></span>
+                                        <span lang="en">Cat.5 <sup class="fas fa-question-circle iconetab" title="Hand Cream"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Bains de bouche"></sup>
-                                        <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Mouthwash"></sup>
+                                        <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Bains de bouche"></sup></span>
+                                        <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Mouthwash"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.7 <sup class="fas fa-question-circle iconetab" title="Soins intimes"></sup>
-                                        <span lang="en">Cat.7 <sup class="fas fa-question-circle iconetab" title="Intimate Wipes"></sup>
+                                        <span lang="fr">Cat.7 <sup class="fas fa-question-circle iconetab" title="Soins intimes"></sup></span>
+                                        <span lang="en">Cat.7 <sup class="fas fa-question-circle iconetab" title="Intimate Wipes"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits coiffants"></sup>
-                                        <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Hair Styling Aids"></sup>
+                                        <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits coiffants"></sup></span>
+                                        <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Hair Styling Aids"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits pour les cheveux rincés"></sup>
-                                        <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Rinse-off Hair Conditioners"></sup>
+                                        <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits pour les cheveux rincés"></sup></span>
+                                        <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Rinse-off Hair Conditioners"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.10 <sup class="fas fa-question-circle iconetab" title="Nettoyant pour surface dure"></sup>
-                                        <span lang="en">Cat.10 <sup class="fas fa-question-circle iconetab" title="Hard Surface Cleaners"></sup>
+                                        <span lang="fr">Cat.10 <sup class="fas fa-question-circle iconetab" title="Nettoyant pour surface dure"></sup></span>
+                                        <span lang="en">Cat.10 <sup class="fas fa-question-circle iconetab" title="Hard Surface Cleaners"></sup></span>
                                       </th>
                                       <th>
-                                        <span lang="fr">Cat.11 <sup class="fas fa-question-circle iconetab" title="Bougies"></sup>
-                                        <span lang="en">Cat.11 <sup class="fas fa-question-circle iconetab" title="Candles"></sup>
+                                        <span lang="fr">Cat.11 <sup class="fas fa-question-circle iconetab" title="Bougies"></sup></span>
+                                        <span lang="en">Cat.11 <sup class="fas fa-question-circle iconetab" title="Candles"></sup></span>
                                       </th>
                                     </tr>
                                     <!-- CORPS DU TABLEAU-->
