--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1272,7 +1272,7 @@ crossorigin=""/>
               <div class="tab-content">
                 <!--Ouverture du 48th amendement-->
                 <div class="tab-pane fade" id="tab48sinfo" role="tabpanel" aria-labelledby="pills-tab48s">    
-                  <div class="container-fluid mt-2">
+                  <div class="container-fluid">
                     <div class="row">
                       <div class="col-12">
                         
