--- a/html/_/index.html
+++ b/html/_/index.html
@@ -647,7 +647,7 @@ crossorigin=""/>
                     <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
                       <h3 class="annexeI49B d-inline IFRA-infos textitem2">
                         <span lang="fr"><b class="item">Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
-                        <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                        <span lang="en"><b>Annexe I :</b> Some natural ingredients contain regulated compounds that have to be taken into account in the recommended limits of use. In case you do not have access to chromatograms for your natrual ingredients, the IFRA is giving tables with default values. Here they are :</span>
                       </h3>
                       <!--Table concentration des synth dans les nat-->
                       <table class="tableannexeI m-0">
@@ -1671,7 +1671,7 @@ crossorigin=""/>
                           <div class="listy-49th-IFRA-table-with-botanicals IFRA-table mt-3">
                             <h3 class="annexeI49B d-inline IFRA-infos textitem2">
                               <span lang="fr"><b class="item">Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
-                              <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                              <span lang="en"><b>Annexe I :</b> Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
                             </h3>
                             <br>
                             <table class="tableannexeI49th mt-0">
