--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -197,8 +197,8 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Silvial®__Silvial®.html"><span lang="en">Silvial<sup>®</sup> (CAS N°: 6658-48-6)</span><span lang="fr">Silvial<sup>®</sup> (CAS N°: 6658-48-6)</span></a>
           </p>
           <p>
-            <u><span lang="fr">Lancement d'un <a href="../_/IFRA.html" target="_BLANK">article sur l'IFRA</a></span>
-               <span lang="en">Launch of an <a href="../_/IFRA.html" target="_BLANK">article about IFRA</span></u>
+            <span lang="fr">Lancement d'un <a href="../_/IFRA.html" target="_BLANK">article sur l'IFRA</a></span>
+            <span lang="en">Launch of an <a href="../_/IFRA.html" target="_BLANK">article about IFRA</a></span>
           </p>
         </div>
       </li>
