--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -5,14 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+<link rel="canonical" href="https://www.scentree.co/_/nouveaute.html">
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
 <title lang="fr">ScenTree - News_Les nouveautés</title>
 <title lang="en">ScenTree - News_Les nouveautés</title>
 <!--Description Google-->
-<meta name="description" content="Chaque semaine, de nouveaux ingrédients de parfum sont ajoutés dans la base de données de ScenTree, venez découvrir nos plus récentes nouveautés" />
+<meta name="description" content="Chaque semaine, de nouveaux ingrédients de parfum sont ajoutés dans la base de données de ScenTree par nos équipes, venez découvrir et enrichir vos connaissances grâces à nos plus récentes nouveautés" />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
