--- a/html/_/support.html
+++ b/html/_/support.html
@@ -5,14 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+<link rel="canonical" href="https://www.scentree.co/_/support.html">
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
 <title lang="fr">ScenTree - Ils nous soutiennent - They Support us</title>
 <title lang="en">ScenTree - Ils nous soutiennent - They Support us</title>
 <!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" content="Chaque semaine, des séances d'olfaction sont organisées afin d'évaluer et de classifier les nouveaux ingrédients de parfum de la plateforme. Les participants à ces séances sont listés ici. Nous les remercions chaleureusement pour leur implication et leur gentillesse."  />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -195,6 +195,7 @@ crossorigin=""/>
         <p>
           <!--POUR TOUT LES NOUVEAUX ->  class="nouveausupporter"  -->
           <ul style="font-size: 0.8em;">
+            <li class="nouveausupporter">AMIEL Fanny -<span lang="fr" class="profession"> (Etudiante à l'ESP)</span><span lang="en" class="profession"> (ESP student)</span></li>
             <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
             <li>BELLOT Raphaël -<span lang="fr" class="profession"> (Apprenti Chimie Analytique Fine Fragrance)</span><span lang="en" class="profession"> (Apprentice in Fine Fragrance Analytical Chemistry)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
@@ -206,7 +207,8 @@ crossorigin=""/>
             <li>FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
             <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
             <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
-            <li class="nouveausupporter">HAGUIER Mathilde -<span lang="fr" class="profession"> (Parfumeur Junior chez IPRA Fragrances)</span><span lang="en" class="profession"> (Junior perfumer at IPRA Fragrances)</span></li>
+            <li>HAGUIER Mathilde -<span lang="fr" class="profession"> (Parfumeur Junior chez IPRA Fragrances)</span><span lang="en" class="profession"> (Junior perfumer at IPRA Fragrances)</span></li>
+            <li class="nouveausupporter">JOUANILLOU JOSUE -<span lang="fr" class="profession"> (Etudiant à l'ESP)</span><span lang="en" class="profession"> (ESP student)</span></li>
             <li>LAMBERT Hanna -<span lang="fr" class="profession"> (Apprentie Parfumeur Analyste chez Only Fragrance)</span><span lang="en" class="profession"> (Analyst Perfumer Apprentice at Only Fragrance)</span></li>
             <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
             <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
@@ -216,9 +218,9 @@ crossorigin=""/>
             <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
             <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
             <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
-            <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
+            <li class="nouveausupporter">TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
             <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
-            <li class="nouveausupporter">TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
+            <li>TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
           </ul>
         </p>
