--- a/html/_/support.html
+++ b/html/_/support.html
@@ -178,20 +178,20 @@ crossorigin=""/>
   <div class="col-12 col-xs-12">
     <div class="row"> 
       <div class="col-6 col-xs-12 entreprise">
-        <p class="mt-3 m-0 p-0 text-center">
+        <h2 class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
           <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
-        </p>
+        </h2>
         <p class="col-12 col-xs-12 mt-3">
            <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
         </p>
       </div>
 
       <div class="col-6 col-xs-12 particulier">
-        <p class="mt-3 m-0 p-0 text-center">
+        <h2 class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b class="bplus"><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
           <span lang="en"><b class="bplus"><i>Professionals who participated to the ScenTree database :</i></b> </span>
-        </p>
+        </h2>
         <p>
           <!--POUR TOUT LES NOUVEAUX ->  class="nouveausupporter"  -->
           <ul style="font-size: 0.8em;">
