--- a/html/_/support.html
+++ b/html/_/support.html
@@ -178,7 +178,7 @@ crossorigin=""/>
   <div class="col-12 col-xs-12">
     <div class="row"> 
       <div class="col-6 col-xs-12 entreprise">
-        <h2 class="mt-3 m-0 p-0 text-center">
+        <h2 class="mt-3 m-0 p-0 text-center" style="font-size: 1em;">
           <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
           <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
         </h2>
@@ -188,7 +188,7 @@ crossorigin=""/>
       </div>
 
       <div class="col-6 col-xs-12 particulier">
-        <h2 class="mt-3 m-0 p-0 text-center">
+        <h2 class="mt-3 m-0 p-0 text-center" style="font-size: 1em;">
           <span lang="fr"><b class="bplus"><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
           <span lang="en"><b class="bplus"><i>Professionals who participated to the ScenTree database :</i></b> </span>
         </h2>
