--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -257,7 +257,7 @@ crossorigin=""/>
           <p>
               <a class="interpop"  href="../ingredients/Sambac_Jasmine_Absolute__Jasmin_Sambac_Absolue.html"><span lang="en">Sambac Jasmine Absolute (CAS N°: 91770-14-8)</span><span lang="fr">Jasmin Sambac Absolue (CAS N°: 91770-14-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Pennyroyal_EO__Menthe_Pouliot_HE.html"><span lang="en">Pennyroyal EO (CAS N°: 90064-00-9)</span><span lang="fr">Menthe Pouliot HE (CAS N°: 90064-00-9)</span></a>
-              <br><a class="interpop"  href="../ingredients/Bergamot_Mint_EO__Menthe_Citronée_HE.html"><span lang="en">Bergamot Mint EO (CAS N°: 85085-49-0)</span><span lang="fr">Menthe Citronée HE (CAS N°: 85085-49-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Bergamot_Mint_EO__Menthe_Citronnée_HE.html"><span lang="en">Bergamot Mint EO (CAS N°: 85085-49-0)</span><span lang="fr">Menthe Citronée HE (CAS N°: 85085-49-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Benzyl_Benzoate__Benzoate_de_Benzyle.html"><span lang="en">Benzyl Benzoate (CAS N°: 120-51-4)</span><span lang="fr">Benzoate de Benzyle (CAS N°: 120-51-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Farnesol__Farnésol.html"><span lang="en">Farnesol (CAS N°: 4602-84-0)</span><span lang="fr">Farnésol (CAS N°: 4602-84-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Rosyrane_Super®__Rosyrane_Super®.html"><span lang="en">Rosyrane Super<sup>®</sup> (CAS N°: 60335-71-9)</span><span lang="fr">Rosyrane Super<sup>®</sup> (CAS N°: 60335-71-9)</span></a>
@@ -301,7 +301,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Gamma-Octalactone__Octalactone-Gamma.html"><span lang="en">Gamma-Octalactone (CAS N°: 104-50-7)</span><span lang="fr">Octalactone-Gamma (CAS N°: 104-50-7)</span></a>
           </p>
           <p><span lang="fr"> Refonte et harmonisation des interfaces de certaines pages du ruban droit. </span><span lang="en">Revamping and harmonization of some page interfaces from right ribbon buttons.</span></p>
-          <p><span lang="fr"> Début de la campagne d'inscription à notre prochaine <a href="../_/Newsletter.html">newsletter</a> </span><span lang="en">Beginning of the registration campaign for our <a href="../_/Newsletter.html">newsletter</a></span></p>
+          <p><span lang="fr"> Début de la campagne d'inscription à notre prochaine <a href="https://www.scentree.co/newsletter/newsletter/subscribe/">newsletter</a> </span><span lang="en">Beginning of the registration campaign for our <a href="https://www.scentree.co/newsletter/newsletter/subscribe/">newsletter</a></span></p>
         </div>
       </li>
       <li>
@@ -362,7 +362,7 @@ crossorigin=""/>
           <p>
               <a class="interpop" href="../ingredients/Benzophenone__Benzophénone.html"><span lang="en">Benzophenone (CAS N°: 119-61-9)</span><span lang="fr">Benzophénone (CAS N°: 119-61-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Acetophenone__Acétophénone.html"><span lang="en">Acetophenone (CAS N°: 98-86-2)</span><span lang="fr">Acétophénone (CAS N°: 98-86-2)</span></a>
-              <br><a class="interpop"  href="../ingredients/Dimétol®__Dimetol®.html"><span lang="en">Dimetol<sup>®</sup> (CAS N°: 113254-34-7)</span><span lang="fr">Dimétol<sup>®</sup> (CAS N°: 113254-34-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dimetol®__Dimétol®.html"><span lang="en">Dimetol<sup>®</sup> (CAS N°: 113254-34-7)</span><span lang="fr">Dimétol<sup>®</sup> (CAS N°: 113254-34-7)</span></a>
               <br><a class="interpop"  href="../ingredients/Grisalva®__Grisalva®.html"><span lang="en">Grisalva<sup>®</sup> (CAS N°: 68611-23-4)</span><span lang="fr">Grisalva<sup>®</sup> (CAS N°: 68611-23-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Delta-3-Carene__Carène-Delta-3.html"><span lang="en">Delta-3-Carene (CAS N°: 13466-78-9)</span><span lang="fr">Carène-Delta-3 (CAS N°: 13466-78-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Dalmatian_Sage_EO__Sauge_Officinale_HE.html"><span lang="en">Dalmatian Sage EO (CAS N°: 8022-56-8)</span><span lang="fr">Sauge Officinale HE (CAS N°: 8022-56-8)</span></a>
