--- a/html/_/legal.html
+++ b/html/_/legal.html
@@ -191,7 +191,7 @@ crossorigin=""/>
       <br>RCS Lille Métropole 424 761 419 00045
       <br>Code APE 2620Z
       <br>Capital Social : 10 069 020 €
-      <br><a class="interpop" href="www.ovh.com" target="_BLANK"> www.ovh.com </a>
+      <br><a class="interpop" href="https://www.ovh.com" target="_BLANK"> www.ovh.com </a>
       <br><a class="interpop" href="mailto:contact@ovh.com"> contact@ovh.com </a>
     </li>
   </ul>   
@@ -291,8 +291,8 @@ crossorigin=""/>
           <span lang="fr">La société ScenTree SAS s’engage à prendre toutes les précautions nécessaires afin de préserver la sécurité des informations, notamment quant au fait qu’elles ne soient pas communiquées à des personnes non autorisées. Cependant, si un incident impactant l’intégrité ou la confidentialité des données de l’utilisateur était porté à la connaissance de la société ScenTree SAS, celle-ci devra en informer les utilisateurs dans les meilleurs délais et leur communiquer les mesures correctives prises.</span>
           <span lang="en">ScenTree SAS are undertaking all necessary precautions to preserve the security of the information, in particular regarding the fact that it is not communicated to unauthorised people. However, if an incident impacting the integrity or confidentiality of the user's data were to be brought to the attention of ScenTree SAS, it must inform the users as soon as possible and inform them of the corrective measures taken.</span>
         <br>
-          <span lang="fr">Les données personnelles sont stockées et sécurisées sur les serveurs de SAS OVH, 2 rue Kellermann, 59100 ROUBAIX, France, RCS Lille Métropole 424 761 419 00045, Code APE 2620Z, <a class="interpop" href="www.ovh.com" target="_BLANK"> www.ovh.com </a>, <a class="interpop" href="mailto:contact@ovh.com"> contact@ovh.com </a>.</span>
-          <span lang="en">Personal data is stored and secured on the servers of SAS OVH, 2 rue Kellermann, 59100 ROUBAIX, France, RCS Lille Métropole 424 761 419 00045, Code APE 2620Z, <a class="interpop" href="www.ovh.com" target="_BLANK"> www.ovh.com </a>, <a class="interpop" href="mailto:contact@ovh.com"> contact@ovh.com </a>.</span>
+          <span lang="fr">Les données personnelles sont stockées et sécurisées sur les serveurs de SAS OVH, 2 rue Kellermann, 59100 ROUBAIX, France, RCS Lille Métropole 424 761 419 00045, Code APE 2620Z, <a class="interpop" href="https://www.ovh.com" target="_BLANK"> www.ovh.com </a>, <a class="interpop" href="mailto:contact@ovh.com"> contact@ovh.com </a>.</span>
+          <span lang="en">Personal data is stored and secured on the servers of SAS OVH, 2 rue Kellermann, 59100 ROUBAIX, France, RCS Lille Métropole 424 761 419 00045, Code APE 2620Z, <a class="interpop" href="https://www.ovh.com" target="_BLANK"> www.ovh.com </a>, <a class="interpop" href="mailto:contact@ovh.com"> contact@ovh.com </a>.</span>
         </p>
 
       <li class="Titre2"><span lang="fr">Vos droits sur vos données personnelles :</span><span lang="en">Your rights on personal data : </span></li>
