--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -396,8 +396,8 @@ crossorigin=""/>
       <tr>
         <td>
           <h4>
-          <a class="interpop" href="../ingredients/Benzyl_Benzoate__Benzoate_de_Benzyl.html" target="_BLANK">
-            <span lang="fr">Benzoate de Benzyl</span>
+          <a class="interpop" href="../ingredients/Benzyl_Benzoate__Benzoate_de_Benzyle.html" target="_BLANK">
+            <span lang="fr">Benzoate de Benzyle</span>
             <span lang="en">Benzyl Benzoate</span>
           </a>
           </h4>
