--- a/html/_/scentree.html
+++ b/html/_/scentree.html
@@ -40,7 +40,7 @@ crossorigin=""/>
   <!--Block Haut avec le logo -->
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center  modal-title modal-title1"><img class="img-fluid  max-height-70px" src="../img/logon.png" alt="Découvrir ScenTree" /></h4>
+  <h1 class="text-center  modal-title modal-title1">Découvrir ScenTree</h1>
 </div>
 
 <!--Block Bas avec les textes -->
