--- a/html/_/scentree.html
+++ b/html/_/scentree.html
@@ -40,7 +40,10 @@ crossorigin=""/>
   <!--Block Haut avec le logo -->
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center  modal-title modal-title1">Découvrir ScenTree</h1>
+  <h1 class="text-center  modal-title modal-title1">
+    <span lang="fr">Découvrir la plateforme et le projet ScenTree</span>
+    <span lang="en">Discover ScenTree project ! </span>
+  </h1>
 </div>
 
 <!--Block Bas avec les textes -->
