--- a/html/_/scentree.html
+++ b/html/_/scentree.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - Menu</title>
 <title lang="en">ScenTree - Menu</title>
 <!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" content="ScenTree est une classification et une base de données innovante et intéractive sur les ingrédients de parfum, cette page raconte les détails de ce projet magnifique destiné aussi bien aux professionnels de la parfumerie qu'aux curieux." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -82,8 +82,8 @@ crossorigin=""/>
 </div>
 
 <div class="papernote">
-  <p lang="fr"><b>Grimpez à l’arbre et rejoignez-nous dans cette expérience pleine d’histoires, cette invitation au voyage à travers les matières premières de la parfumerie : le <i>ScenTree</i>.</b></p>
-  <p lang="en"><b>Just climb to the tree and join us in this experience full of story-telling, this invitation to a trip through raw materials: ScenTree. </b></p>
+  <h2 lang="fr" style="font-size: 1em;"><b>Grimpez à l’arbre et rejoignez-nous dans cette expérience pleine d’histoires, cette invitation au voyage à travers les matières premières de la parfumerie : le <i>ScenTree</i>.</b></h2>
+  <h2 lang="en" style="font-size: 1em;"><b>Just climb to the tree and join us in this experience full of story-telling, this invitation to a trip through raw materials: ScenTree. </b></h2>
 </div>
 <p class="license text-center" lang="fr"><i>Pour tout complément d'information, question ou remarque, merci de rentrer en contact avec <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a> ou <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a></i></p>
 <p class="license text-center" lang="en"><i>For any information, request or remark, please contact <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD</a> and <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a></i></p>
