--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -166,6 +166,11 @@ crossorigin=""/>
 <div class="col-12 text-justify"> 
 
   <div class="col-6 partiedroite" style="background-color: blue;">
+    <div class="row nombres">
+      <div class="offset-1 col-2">464 Ingredients</div>
+      <div class="offset-1 col-2">102 descripteurs</div>
+    </div>
+    <div class="row video"></div>
   </div>
 
   <div class="col-6 scrollbarblockgauche pagederoulante">
