--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -165,23 +165,23 @@ crossorigin=""/>
  
 <div class="row">
   <div class="col-12 text-justify"> 
-
-    <div class="row col-6 partiedroite" style="background-color: blue;">
-      <div class="row nombres">
-        <div class="offset-1 col-5">464 Ingredients</div>
-        <div class="offset-1 col-5">102 descripteurs</div>
+    <div class="row">
+      <div class="col-6 partiedroite" style="background-color: blue;">
+        <div class="row nombres">
+          <div class="offset-1 col-5">464 Ingredients</div>
+          <div class="offset-1 col-5">102 descripteurs</div>
+        </div>
+        <div class="row video"></div>
       </div>
-      <div class="row video"></div>
-    </div>
 
-    <div class="row col-6 scrollbarblockgauche pagederoulante">
-      <h2 class="maskedtitle mt-3">
-        <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
-        <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
-      </h2>
-      <div class="sources col-12 mt-3 mb-3"></div>
+      <div class="col-6 scrollbarblockgauche pagederoulante">
+        <h2 class="maskedtitle mt-3">
+          <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
+          <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
+        </h2>
+        <div class="sources col-12 mt-3 mb-3"></div>
+      </div>
     </div>
-    
   </div>
 </div>
 </div>
