--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -172,8 +172,8 @@ crossorigin=""/>
           <div class="offset-1 col-5">464 Ingredients</div>
           <div class="offset-1 col-5">102 descripteurs</div>
         </div>
-        <div class="row col-12 video" style="align-items: center;">
-          <video src="https://www.youtube.com/watch?v=jpSyGY1EPVs" width=320  height=240 controls preload="none"></video>
+        <div class="row col-12 text-center" style="align-items: center;">
+          <video src="https://www.youtube.com/watch?v=jpSyGY1EPVs" controls></video>
         </div>
       </div>
 
