--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -173,7 +173,9 @@ crossorigin=""/>
           <div class="offset-1 col-5">102 descripteurs</div>
         </div>
         <div class="row col-12 text-center" style="align-items: center;">
-          <video src="https://www.youtube.com/watch?v=jpSyGY1EPVs" controls></video>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://youtube.com/embed/7IpLYzM72ms" id="video"></iframe>
+          </div>
         </div>
       </div>
 
