--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -174,7 +174,7 @@ crossorigin=""/>
         </div>
         <div class="row col-12 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://youtube.com/embed/7IpLYzM72ms" id="video"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=jpSyGY1EPVs" id="video"></iframe>
           </div>
         </div>
       </div>
