--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -173,7 +173,7 @@ crossorigin=""/>
           <div class="offset-1 col-5">102 descripteurs</div>
         </div>
         <div class="row col-12 text-center" style="align-items: center;">
-          <div class="embed-responsive embed-responsive-16by9">
+          <div class="embed-responsive">
           <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" id="video"></iframe>
         </div>
         </div>
